[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/InputMapButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/OptionsPopup.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/libraryTheme.theme" type="Theme" id=3]
[ext_resource path="res://assets/ui/emphasisFont.tres" type="DynamicFont" id=4]

[node name="OptionsPopup" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -321.5
margin_top = -220.5
margin_right = 327.5
margin_bottom = 220.5
theme = ExtResource( 3 )
script = ExtResource( 2 )
initial_focus = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/DisplayOptions")
display_options_select = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/DisplayOptions")
resolution_options_select = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/ResolutionOptions")
shadows_options_select = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/ShadowsOptions")
msaa_options_select = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/MSAAOptions")
fxaa_enabled = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/FXAAEnabled")
vsync_enabled = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VSyncEnabled")
fov_slider = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer/FOVSlider")
look_sensitivity_slider = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2/LookSensitivitySlider")
sfx_volume_slider = NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/SFXVolumeSlider")
input_map_selects = [ NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/ForwardKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/LeftKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/RightKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/BackwardKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/PickKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/PickController"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/PageForwardKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/PageForwardController"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/PageBackKeyboard"), NodePath("MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer/PageBackController") ]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 642.0
margin_bottom = 434.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 615.0
margin_bottom = 407.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 595.0
margin_bottom = 349.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
scroll_vertical = 144

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_top = -144.0
margin_right = 583.0
margin_bottom = 636.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 578.0
margin_bottom = 770.0
size_flags_horizontal = 3

[node name="Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 573.0
margin_bottom = 382.0
custom_constants/hseparation = 10
columns = 2

[node name="Display" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 3.0
margin_right = 176.0
margin_bottom = 31.0
text = "Display"

[node name="DisplayOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_right = 573.0
margin_bottom = 34.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 41.0
margin_right = 176.0
margin_bottom = 69.0
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 38.0
margin_right = 573.0
margin_bottom = 72.0

[node name="Shadows" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 79.0
margin_right = 176.0
margin_bottom = 107.0
text = "Shadows"

[node name="ShadowsOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 76.0
margin_right = 573.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 0 )

[node name="MSAA" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 117.0
margin_right = 176.0
margin_bottom = 145.0
text = "MSAA"

[node name="MSAAOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 114.0
margin_right = 573.0
margin_bottom = 148.0

[node name="FXAA" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 156.0
margin_right = 176.0
margin_bottom = 184.0
text = "FXAA"

[node name="FXAAEnabled" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 152.0
margin_right = 573.0
margin_bottom = 188.0

[node name="VSync" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 196.0
margin_right = 176.0
margin_bottom = 224.0
text = "VSync"

[node name="VSyncEnabled" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 192.0
margin_right = 573.0
margin_bottom = 228.0

[node name="FOV" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 232.0
margin_right = 176.0
margin_bottom = 289.0
size_flags_vertical = 1
text = "FOV"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 232.0
margin_right = 573.0
margin_bottom = 289.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer"]
margin_right = 387.0
margin_bottom = 16.0
min_value = 40.0
max_value = 140.0
step = 2.0
value = 90.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer"]
margin_top = 20.0
margin_right = 387.0
margin_bottom = 48.0

[node name="MinFOV" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "40"

[node name="MaxFOV" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 387.0
margin_bottom = 28.0
text = "140"

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer"]
margin_top = 52.0
margin_right = 387.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 5 )

[node name="LookSensitivity" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 293.0
margin_right = 176.0
margin_bottom = 350.0
size_flags_vertical = 1
text = "Look Sensitivity"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 293.0
margin_right = 573.0
margin_bottom = 350.0

[node name="LookSensitivitySlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2"]
margin_right = 387.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.05
value = 1.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2"]
margin_top = 20.0
margin_right = 387.0
margin_bottom = 48.0

[node name="MinSensitivity" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2/HBoxContainer"]
margin_right = 361.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "0.1x"

[node name="MaxSensitivity" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2/HBoxContainer"]
margin_left = 365.0
margin_right = 387.0
margin_bottom = 28.0
text = "2x"

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2"]
margin_top = 52.0
margin_right = 387.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 5 )

[node name="SFXVolume" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_top = 354.0
margin_right = 176.0
margin_bottom = 382.0
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings"]
margin_left = 186.0
margin_top = 354.0
margin_right = 573.0
margin_bottom = 370.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="Controls" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 573.0
margin_bottom = 765.0

[node name="Controls" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls"]
margin_right = 573.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Controls"
align = 1

[node name="ResetControls" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls"]
margin_top = 40.0
margin_right = 573.0
margin_bottom = 74.0
text = "Reset to Defaults"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls"]
margin_top = 78.0
margin_right = 573.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 11
columns = 3

[node name="Action" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_right = 143.0
margin_bottom = 28.0

[node name="Keyboard" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_left = 147.0
margin_right = 358.0
margin_bottom = 28.0
text = "Keyboard"

[node name="Controller" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_left = 362.0
margin_right = 573.0
margin_bottom = 28.0
text = "Controller"

[node name="Forward" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 39.0
margin_right = 143.0
margin_bottom = 67.0
text = "Move Forward"

[node name="ForwardKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 39.0
margin_right = 358.0
margin_bottom = 67.0
action = "move_forward"

[node name="PlaceholderFowardController" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_left = 362.0
margin_top = 39.0
margin_right = 573.0
margin_bottom = 67.0

[node name="Left" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 78.0
margin_right = 143.0
margin_bottom = 106.0
text = "Move Left"

[node name="LeftKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 78.0
margin_right = 358.0
margin_bottom = 106.0
action = "move_left"

[node name="PlaceholderLeftController" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_left = 362.0
margin_top = 78.0
margin_right = 573.0
margin_bottom = 106.0

[node name="Backward" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 117.0
margin_right = 143.0
margin_bottom = 145.0
text = "Move Backward"

[node name="BackwardKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 117.0
margin_right = 358.0
margin_bottom = 145.0
action = "move_backward"

[node name="PlaceholderBackwardController" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_left = 362.0
margin_top = 117.0
margin_right = 573.0
margin_bottom = 145.0

[node name="Right" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 156.0
margin_right = 143.0
margin_bottom = 184.0
text = "Move Right"

[node name="RightKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 156.0
margin_right = 358.0
margin_bottom = 184.0
action = "move_right"

[node name="PlaceholderRightController" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_left = 362.0
margin_top = 156.0
margin_right = 573.0
margin_bottom = 184.0

[node name="Pickup" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 195.0
margin_right = 143.0
margin_bottom = 223.0
text = "Pick up/Drop"

[node name="PickKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 195.0
margin_right = 358.0
margin_bottom = 223.0
action = "pick_up"

[node name="PickController" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 362.0
margin_top = 195.0
margin_right = 573.0
margin_bottom = 223.0
action = "pick_up"
key_type = 1

[node name="NextPage" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 234.0
margin_right = 143.0
margin_bottom = 262.0
text = "Next page"

[node name="PageForwardKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 234.0
margin_right = 358.0
margin_bottom = 262.0
action = "turn_page_forward"

[node name="PageForwardController" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 362.0
margin_top = 234.0
margin_right = 573.0
margin_bottom = 262.0
action = "turn_page_forward"
key_type = 1

[node name="PrevPage" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer"]
margin_top = 273.0
margin_right = 143.0
margin_bottom = 301.0
text = "Last page"

[node name="PageBackKeyboard" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 147.0
margin_top = 273.0
margin_right = 358.0
margin_bottom = 301.0
action = "turn_page_back"

[node name="PageBackController" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/GridContainer" instance=ExtResource( 1 )]
margin_left = 362.0
margin_top = 273.0
margin_right = 573.0
margin_bottom = 301.0
action = "turn_page_back"
key_type = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 353.0
margin_right = 595.0
margin_bottom = 387.0

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 295.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Back"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 299.0
margin_right = 595.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_OptionsPopup_visibility_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/DisplayOptions" to="." method="_on_DisplayOptions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/ShadowsOptions" to="." method="_on_ShadowsOptions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/MSAAOptions" to="." method="_on_MSAAOptions_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/FXAAEnabled" to="." method="_on_FXAAEnabled_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VSyncEnabled" to="." method="_on_VSyncEnabled_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer/FOVSlider" to="." method="_on_FOVSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/VBoxContainer2/LookSensitivitySlider" to="." method="_on_LookSensitivitySlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Settings/SFXVolumeSlider" to="." method="_on_SFXVolumeSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Controls/ResetControls" to="." method="_on_ResetControls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
